--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/apex_test_tools
-	previous = 
-	base = ccbaaf984678
+	previous = ccbaaf984678
+	base = 2abbb3dd9f0f
 	trim = 
 	trimbase = 
