--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/test_apex_test_tools
-	previous = 
-	base = 51671791e3d6
+	previous = 51671791e3d6
+	base = bdd7c8359f32
 	trim = 
 	trimbase = 
